moved layout fav hint to section header
added german translation

using url generator to generate settings url

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -919,7 +919,7 @@ div.pub-person-tab-content {
 }
 
 div.pub-citation-tab-content {
-	height: 132px;
+	min-height: 132px;
 }
 
 div.pub-citation-tab-content textarea {
