limiting pre height

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1597,3 +1597,13 @@ p.separator {
 		text-transform: uppercase;
 	}
 }
+
+/** export */
+pre.export {
+	height: auto;
+	max-height: 200px;
+	overflow: auto;
+	word-break: normal !important;
+	word-wrap: normal !important;
+	white-space: pre !important;
+}​
