--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/persons.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/persons.jspx
@@ -110,7 +110,7 @@
 								<div class="text-center">
 									<form action="#">
 										<input type="hidden" name="ckey" value="${ckey}"/>
-										<div class='input-group' style="margin-left: auto; width: 100%; margin-right: auto; ">
+										<div id="person-scroll-menu" class='input-group' style="margin-left: auto; width: 100%; margin-right: auto; ">
 											
 											<fmt:message key="person.index.placeholder" var="placeholderText"/>
 											<input class='form-control typeahead' id='searchPersonAutocomplete' type='text' name='searchPersonAutocomplete' autocomplete="off" placeholder='${placeholderText}'/>
