--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -46,6 +46,8 @@
 @import "systemtags.less";
 
 @import "help.less";
+/** Person - Genealogy Page */
+@import "personPage.less";
 
 /** styles for admin pages */
 @import "bootstrap-admin.less";
