moved citation tab style definition

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1607,3 +1607,7 @@ pre.export {
 	word-wrap: normal !important;
 	white-space: pre !important;
 }
+
+.citation-box ul li a {
+	padding: 5px 10px;
+}
