--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/user.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/user.jspx
@@ -76,7 +76,9 @@
 											<fmt:param value="${fn:escapeXml(command.requestedUser)}"/>
 										</fmt:message>
 								</h5>
-								<a href="${relativeUrlGenerator.prefix('discussed').getUserUrlByUserName(fn:escapeXml(command.requestedUser))}" title="${title}">
+								
+								<c:set var="urlGeneratorDiscussed" value="${urlGeneratorFactory.createURLGeneratorForPrefix(null, 'personalized')}" />
+								<a href="${urlGeneratorDiscussed.getUserUrlByUserName(fn:escapeXml(command.requestedUser))}" title="${title}">
 									<fmt:message key="discussion.byUser"><fmt:param value="${fn:escapeXml(command.requestedUser)}"/></fmt:message>
 								</a>
 							</li>
